tests/fixtures/invalid/pow_none_set_set.py
# Cannot call pow() with None, Set[int], Set[int]
x = pow(None, {1, 2, 3}, {1, 2, 3})
